--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                         <div class="progress-bar" id="speed-bar"></div>
                     </div>
                 </div>
-                <button id="hour-button" onmousedown="startAddingPoints(1)" onmouseup="stopAddingPoints()">Add 1 Hour</button>
-                <button id="minute-button" onmousedown="startAddingPoints(0.5)" onmouseup="stopAddingPoints()">Add 30 Minutes</button>
-                <button id="remove-hour-button" onmousedown="startRemovingPoints(1)" onmouseup="stopRemovingPoints()">Remove 1 Hour</button>
-                <button id="remove-minute-button" onmousedown="startRemovingPoints(0.5)" onmouseup="stopRemovingPoints()">Remove 30 Minutes</button>
+                <button id="hour-button" onmousedown="startAddingPoints(1)" onmouseup="stopAddingPoints()" onmouseleave="stopAddingPoints()">Add 1 Hour</button>
+                <button id="minute-button" onmousedown="startAddingPoints(0.5)" onmouseup="stopAddingPoints()" onmouseleave="stopAddingPoints()">Add 30 Minutes</button>
+                <button id="remove-hour-button" onmousedown="startRemovingPoints(1)" onmouseup="stopRemovingPoints()" onmouseleave="stopRemovingPoints()">Remove 1 Hour</button>
+                <button id="remove-minute-button" onmousedown="startRemovingPoints(0.5)" onmouseup="stopRemovingPoints()" onmouseleave="stopRemovingPoints()">Remove 30 Minutes</button>
             </div>
         </div>
     </div>
