--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div id="add-skill-form" class="hidden">
             <input type="text" id="skill-name" placeholder="Skill Name">
             <input type="text" id="skill-description" placeholder="Skill Description">
+            <input type="text" id="skill-icon" placeholder="Font Awesome Icon (e.g., fa-brain)">
             <button onclick="addSkill()">Add</button>
             <button onclick="hideAddSkillForm()">Cancel</button>
         </div>
@@ -24,3 +25,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
