--- a/index.html
+++ b/index.html
@@ -9,13 +9,42 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+  
+
+  
+  
+  
+  
+  
 <!-- Landing Page -->
 <div id="landing-page" class="container">
     <!-- Info Button -->
     <button id="info-button" onclick="navigateTo('instructions')" style="position: absolute; top: 10px; left: 10px; width: 30px; height: 30px; font-size: 20px; padding: 0; border: none; border-radius: 50%; text-align: center; line-height: 30px;">
         ⓘ
     </button>
+  
+  
+      <!-- Background Audio -->
+<!-- Discrete Music Controls -->
+<div style="position: fixed; top: 5px; right: 10px; z-index: 1000; opacity: 0.75; display: flex; align-items: center;">
+    <!-- Start Button -->
+    <button style="background: none; border: none; font-size: 16px; cursor: pointer; margin-right: 5px;" onclick="document.getElementById('background-audio').play()" title="Play Music">
+        &#9654; <!-- Play Icon -->
+    </button>
+    <!-- Stop Button -->
+    <button style="background: none; border: none; font-size: 18px; cursor: pointer; margin-right: 5px;" onclick="document.getElementById('background-audio').currentTime = 0; document.getElementById('background-audio').pause()" title="Stop Music">
+        &#9632; <!-- Stop Icon -->
+    </button>
+    <!-- Volume Slider -->
+    <label for="volume-control" style="font-size: 16px; margin-right: 5px; vertical-align: middle;">🔊</label>
+    <input type="range" id="volume-control" min="0" max="1" step="0.01" value="1" 
+        onchange="document.getElementById('background-audio').volume = this.value" 
+        style="width: 50px; height: 10px; cursor: pointer;">
+</div>
 
+<audio id="background-audio" src="https://davidanand02.github.io/V12_System/[No Copyright] Fuzzeke - Are You With Us_ [Gaming Menu Music].mp3" loop></audio>
+
+  
     <h1>Welcome Player</h1>
     <p>You now have the qualifications to begin.</p>
     
@@ -48,10 +77,16 @@
 
   
   
+  
+  
+  
+  
+  
+  
  <!-- Player Status Page (Hidden by default) -->
 <div id="player-status-page" class="container">
     <h1>Player Status</h1>
-    <div id="status-scroll-container" class="scrollable-container">
+    <div id="status-scroll-container" class="scrollable-list">
         <section class="player-info">
             <h2>Player Info</h2>
             <p><strong>Player Level:</strong> <span id="player-level">1</span></p>
