--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <section class="effects-section">
             <h2>Active and Passive Effects</h2>
             <ul id="effects-list" contenteditable="true">
-                <li>Class Effects: </li>
+                <li>Job Effects: </li>
                 <li>Title Effects: </li>
             </ul>
         </section>
