--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 
     <p>1. <strong>Status Page:</strong> Track the rewards you set and earn from quests here. These include:</p>
     <ul>
-        <li><strong>Stat Points:</strong> These contribute to your overall player level.</li>
-        <li><strong>Player Effects:</strong> These provide boosts and special protections, either passive or active. Effects can be innate, granted by equipping a class/job or title. Titles are also achieved through quests.</li>
+        <p><strong>Stat Points:</strong> These contribute to your overall player level.</p>
+        <p><strong>Player Effects:</strong> These provide boosts and special protections, either passive or active. Effects can be innate, granted by equipping a class/job or title. Titles are also achieved through quests.</p>
     </ul>
 
     <p>2. <strong>Job Page:</strong> List the jobs you're interested in acquiring and leveling up. Acquiring a job means you can have job-specific skills and quests.</p>
