--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
     <h1>Quests</h1>
   
     <button onclick="showQuestPage('make-quest')">Make Quest</button>
-    <button onclick="goBackToMenu()">Back to Menu</button>
+    <button onclick="goBackToMenu()">Back</button>
 
     <!-- Active Quests Section -->
     <h2>Active Quests</h2>
@@ -357,7 +357,7 @@
 <div id="job-page" class="container" style="display: none;">
     <h1>Jobs</h1>
     <button onclick="showJobPage('create-job')">Create Job</button>
-    <button onclick="goBackToMenu()">Back to Menu</button>
+    <button onclick="goBackToMenu()">Back</button>
     
     <!-- Job List Section -->
     <div id="job-list-container" class="scrollable-list">
@@ -375,8 +375,8 @@
             <p id="job-level">Level: 1</p>
             <div id="job-experience-bar" class="progress-bar"></div>
         </div>
-        <button onclick="addJobExperience(100)">+ 1</button>
-        <button onclick="subtractJobExperience(100)">- 1</button>
+        <button onclick="addJobExperience(100)">+ 1 Hr/Rep</button>
+        <button onclick="subtractJobExperience(100)">- 1 Hr/Rep</button>
         <button onclick="goBacktoJobPage()">Back</button>
         <button id="delete-job-button" onclick="deleteJob()">Delete</button> <!-- Delete Job Button -->
     </div>
@@ -398,7 +398,6 @@
         
     </form>
 </div>
-  
 
   
   
