--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         style="width: 50px; height: 10px; cursor: pointer;">
 </div>
 
-<audio id="background-audio" src="https://davidanand02.github.io/V14_System/[No Copyright] Fuzzeke - Are You With Us_ [Gaming Menu Music].mp3" loop></audio>
+<audio id="background-audio" src="https://raw.githubusercontent.com/DavidAnand02/V14_System/371679d8a3d997a41b8a5ae19947ce90beb56d72/%5BNo%20Copyright%5D%20Fuzzeke%20-%20Are%20You%20With%20Us_%20%5BGaming%20Menu%20Music%5D.mp3" loop></audio>
 
   
     <h1>Welcome Player</h1>
