--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <audio id="background-audio" src="https://raw.githubusercontent.com/DavidAnand02/V14_System/371679d8a3d997a41b8a5ae19947ce90beb56d72/%5BNo%20Copyright%5D%20Fuzzeke%20-%20Are%20You%20With%20Us_%20%5BGaming%20Menu%20Music%5D.mp3" loop></audio>
 
   
+  
     <h1>Welcome Player</h1>
     <p>You now have the qualifications to begin.</p>
     
@@ -323,7 +324,7 @@
             <button onclick="markQuestAsCompleted()">Complete Quest</button>
             <button onclick="markQuestAsFailed()">Fail Quest</button>
             <button onclick="moveQuestToActive()">Move to Active</button>
-            <button onclick="deleteQuest()">Delete Quest</button>
+            <button onclick="deleteQuest()" style="background-color: red; color: white;">Delete Quest</button>
             <button onclick="closeQuestInfo()">Close</button>
         </div>
     </div>
@@ -422,10 +423,12 @@ function saveChanges(event) {
             <p id="job-level">Level: 1</p>
             <div id="job-experience-bar" class="progress-bar"></div>
         </div>
+      <button onclick="goBacktoJobPage()">Back</button>
         <button onclick="addJobExperience(100)">+ 1 Hr/Rep</button>
         <button onclick="subtractJobExperience(100)">- 1 Hr/Rep</button>
-        <button onclick="goBacktoJobPage()">Back</button>
-        <button id="delete-job-button" onclick="deleteJob()">Delete</button> <!-- Delete Job Button -->
+      
+        <button id="delete-job-button" onclick="deleteJob()" style="background-color: red; color: white;">Delete</button>
+ <!-- Delete Job Button -->
     </div>
 </div>
 
