--- a/index.html
+++ b/index.html
@@ -487,8 +487,19 @@ function saveJobDescription() {
   
   
     <script src="script.js"></script>
+
+
+      <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+<script>
+  kofiWidgetOverlay.draw('architect01', {
+    'type': 'floating-chat',
+    'floating-chat.donateButton.text': 'Support me',
+    'floating-chat.donateButton.background-color': '#00b9fe',
+    'floating-chat.donateButton.text-color': '#fff'
+  });
+</script>
   
-  
+
   
 </body>
 </html>
